更新文档，更新至 1.8.0

--- a/src/main/resources/assets/extshape/lang/lzh.json
+++ b/src/main/resources/assets/extshape/lang/lzh.json
@@ -24,9 +24,14 @@
 
   "options.extshape.title": "塊形之擴改囊配製",
   "options.extshape.addToVanillaGroups": "咸入本設",
-  "options.extshape.addToVanillaGroups.tooltip": "塊由是改囊增益者，咸入礦藝之本設之組也。如例，階版咸入組「%s」，檻扉咸入組「%s」，鈕及踏板如「%s」組。物入以序同其定者，因序無則。然若已載「合理排序」改囊，可啟是項。",
+  "options.extshape.addToVanillaGroups.tooltip": "如啟，塊于是囊者入本設之組，如%s、%s、%s者。是塊者，追於其基礎，以尋多形之共基礎者也。各形咸添，亦可指和何形以添，于纂於下文。",
   "options.extshape.showSpecificGroups": "顯專物組",
-  "options.extshape.showSpecificGroups.tooltip": "增益專組以列塊之擁異形者，其括礦藝之本設。是塊也，序以基，塊同基者並序也。",
+  "options.extshape.showSpecificGroups.tooltip": "增益四專組以列塊之擁異形者，其括礦藝之本設。是塊也，序以基，塊同基者並序也。",
+  "options.extshape.shapesToAddToVanilla": "形之增益入本設者",
+  "options.extshape.shapesToAddToVanilla.description": "增益何形於本設物組耶？（間以空。）",
+  "options.extshape.shapesInSpecificGroups": "形之增益入專組者",
+  "options.extshape.shapesInSpecificGroups.description": "增益何形於是囊之專物組耶？（間以空。）",
+  "options.extshape.reset": "復",
   "options.extshape.preventWoodenWallRecipes": "避木垣之製方",
   "options.extshape.preventWoodenWallRecipes.tooltip": "避木垣之製方，以解其與解與木窖門之方之撞。若開，汝無以精製木垣。若既載之改囊之解方之撞者，是項可關也。",
   "options.extshape.avoidSomeButtonRecipes": "避數鈕之製方",
@@ -39,26 +44,27 @@
   "options.extshape.confirm.noGroups": "君「%s」並「%s」咸為「%s」，是形也，如為創法，無從取物自是囊者于創之囊。確行此乎？",
   "options.extshape.confirm.redo": "吾欲三思",
   "options.extshape.registerBlockFamilies": "入簿BlockFamilies",
-  "options.extshape.registerBlockFamilies.description": "塊之增益於是改也，咸入簿礦藝之BlockFamilies也。他或用也，然若亦用BlockFamilies或現衝突。常無需啟。\n複啟以效見",
+  "options.extshape.registerBlockFamilies.description": "常無諫啟。如啟，始發塊藝之時，塊之關係者咸入 BlockFamilies 也，或可識於他囊，亦有致不穩之險，因無諫之啟。\n複啟以效見",
 
   "options.extshape.rrp.title": "運行時資囊設置",
   "options.extshape.rrp.description": "理運行時資囊之於塊形之擴模組也。",
   "options.extshape.rrp.regenClientResources": "復生客端資囊",
   "options.extshape.rrp.regenClientResources.process": "正在復生客端資囊…",
-  "options.extshape.rrp.regenClientResources.description": "復生改囊之運行時資囊之客端資囊，無作於原生與他囊。用以開發，效常不見。復生之囊，應于F3+T。",
+  "options.extshape.rrp.regenClientResources.description": "復生改囊之運行時資囊之客端資囊，無作於原生與他囊。用以開發，於時可熱重載其變者，他時常無。復生之囊之變者，應于F3+T以見。",
   "options.extshape.rrp.regenServerData": "復生伺服器錄囊",
   "options.extshape.rrp.regenServerData.process": "正在復生伺服器錄囊…",
-  "options.extshape.rrp.regenServerData.description": "復生改囊之運行時資囊之伺服器錄囊，無作於原生與他囊。用以開發，效常不見。復生之囊，應于/data命令畢時",
+  "options.extshape.rrp.regenServerData.description": "復生改囊之運行時資囊之伺服器錄囊，無作於原生與他囊。用以開發，於時可熱重載其變者，他時常無。復生之囊之變者，應于/data命令畢時見",
   "options.extshape.rrp.exportClientResources": "出錄客端資囊",
   "options.extshape.rrp.exportClientResources.process": "正錄客端資囊…",
-  "options.extshape.rrp.exportClientResources.description": "錄運行時資囊之客端之資至指定路徑，以類常規資囊顯其內容。",
+  "options.extshape.rrp.exportClientResources.description": "錄運行時資囊之客端之資至指定路徑，以類常規資囊明顯其內容。",
   "options.extshape.rrp.exportServerData": "出錄伺服器錄囊",
   "options.extshape.rrp.exportServerData.process": "正錄伺服器錄囊…",
-  "options.extshape.rrp.exportServerData.description": "錄運行時資囊之伺服器之錄至指定路徑，以類常規錄囊顯其內容。",
+  "options.extshape.rrp.exportServerData.description": "錄運行時資囊之伺服器之錄至指定路徑，以類常規錄囊明顯其內容。",
   "options.extshape.rrp.exportFilePath": "出錄檔路徑",
   "options.extshape.rrp.textFieldHeader": "錄資于是路：",
   "options.extshape.rrp.fullPath": "完整路徑：%s",
   "options.extshape.rrp.invalidPath": "是路無效：%s",
+  "options.extshape.rrp.info": "示：是頁僅於除錯，常無用於遊玩者也。如無能明是頁之效，觸「%s」。",
 
   "options.extshape.reasonable-sorting": "調《知序》之規",
   "options.extshape.reasonable-sorting.description": "如既載改囊《知序》，君可明何以序塊物據其形也，含形之是改囊（塊形之擴）供者。是規者，無動塊之他囊供者。\n\n君亦可選「Reasonable Sorting」於改囊選單以入其規頁。\n\n若無應，以《知序》改囊未载或係低版也。",
@@ -66,7 +72,7 @@
   "options.extshape.dataChanged.details": "運行時資囊之此改囊用這，生於礦藝之既蘇之時。君既纂有關錄生之項，其果于復生伺服器之錄囊也。若當下之伺服器（含獨戲內置者）正作，需執\u00a77/reload\u00a7r命令以成效。",
   "options.dataChanged.finish": "既複生運行時資囊之伺服器錄。若為獨戲或為伺服器主，揮%s以顯方之更。注：惟伺服器主機之設可見效也。",
 
-  "message.extshape.recipe_conflict.start": "開始檢測合成表撞車，可能需要一段時間",
+  "message.extshape.recipe_conflict.start": "始測方之撞，或據一時",
   "message.extshape.recipe_conflict.detected": "驗方之撞：%s",
   "message.extshape.recipe_conflict.unknown": "驗方之異：%s",
   "message.extshape.recipe_conflict.exception": "驗方撞而生異常",
