--- a/src/main/resources/assets/extshape/lang/zh_tw.json
+++ b/src/main/resources/assets/extshape/lang/zh_tw.json
@@ -24,9 +24,14 @@
 
   "options.extshape.title": "擴展方塊形狀模組配置",
   "options.extshape.addToVanillaGroups": "添加至原版物品組",
-  "options.extshape.addToVanillaGroups.tooltip": "將本模組添加的方塊添加至麥塊的原版創造模式物品組中。例如，所有的階梯和半磚都加入「%s」物品組，柵欄和牆加入「%s」物品組，按鈕和壓力板則加入「%s」物品組。物品是按照被定義時的順序加入的，所以可能會有點亂，但是如果您安裝了合理排序模組，則推薦開啟此項。",
-  "options.extshape.showSpecificGroups": "顯示專門物品組",
-  "options.extshape.showSpecificGroups.tooltip": "添加一些專門的物品組以顯示所有擁有不同形狀的方塊（含原版和模組中的），這些方塊按照其基礎方塊的順序排列，基礎方塊相同的方塊顯示在一起。",
+  "options.extshape.addToVanillaGroups.tooltip": "如果啟用，此模組中的方塊將會直接添加到 Minecraft 的原版物品組中，例如%s、%s和%s。方塊會直接添加到其基礎方塊後面，這樣你可以方便地找到同一基礎方塊的不同形狀的方塊。默認情況下，會添加所有的形狀。你可以在下面的文本框中指定添加哪些形狀。",
+  "options.extshape.showSpecificGroups": "顯示專用物品組",
+  "options.extshape.showSpecificGroups.tooltip": "添加4個專門的物品組以顯示所有擁有不同形狀的方塊（含原版和模組中的），這些方塊按照其基礎方塊的順序排列，基礎方塊相同的方塊顯示在一起。",
+  "options.extshape.shapesToAddToVanilla": "添加到原版物品組中的形狀",
+  "options.extshape.shapesToAddToVanilla.description": "需要將哪些形狀的方塊添加到原版物品組中？（用空格間隔。）",
+  "options.extshape.shapesInSpecificGroups": "專用物品組中的形狀",
+  "options.extshape.shapesInSpecificGroups.description": "將哪些形狀的方塊添加到本模組的專用物品組中？（用空格間隔。）",
+  "options.extshape.reset": "重置",
   "options.extshape.preventWoodenWallRecipes": "避免木牆合成配方",
   "options.extshape.preventWoodenWallRecipes.tooltip": "避免木牆的合成配方，以解決與木質地板門的配方撞車問題。若開啟，您將無法合成木牆。如果您安裝了可以修復合成表撞車的模組，可以將本選項關閉。",
   "options.extshape.avoidSomeButtonRecipes": "避免部分按鈕配方",
@@ -39,26 +44,27 @@
   "options.extshape.confirm.noGroups": "您的「%s」和「%s」都設置為「%s」，這意味著您在創造模式下，無法從創造模式物品欄中獲取模組中的物品。確定要繼續嗎？",
   "options.extshape.confirm.redo": "我再考慮下",
   "options.extshape.registerBlockFamilies": "註冊 BlockFamilies",
-  "options.extshape.registerBlockFamilies.description": "將本模組內的方塊關係註冊到 Minecraft 原版的 BlockFamilies 中。BlockFamilies 可能會被其他模組識別，但是如果其他模組也使用這些 BlockFamilies 則有可能出現一些問題。一般不需要開啟。\n重啟遊戲後生效。",
+  "options.extshape.registerBlockFamilies.description": "一般不建議開啟。如果啟用，初始化 Minecraft 的時候，本模組中的方塊與 Minecraft 的原版方塊之間的關係將會註冊到 BlockFamilies 中。BlockFamilies 的註冊表可以被其他模組識別，但有可能導致不穩定，因此一般不需要開啟。\n\n重啟遊戲後生效。",
 
   "options.extshape.rrp.title": "運行時資源包設置",
   "options.extshape.rrp.description": "管理擴展方塊形狀模組的運行時資源包。",
   "options.extshape.rrp.regenClientResources": "重新生成用戶端資源包",
   "options.extshape.rrp.regenClientResources.process": "正在重新生成用戶端資源包…",
-  "options.extshape.rrp.regenClientResources.description": "重新生成本模組的運行時資源包的用戶端資源包，不影響原版和其他模組。主要用於開發，一般不起效果。重新生成的資源需按 F3+T 才會被應用。",
+  "options.extshape.rrp.regenClientResources.description": "重新生成本模組的運行時資源包的用戶端資源包，不影響原版和其他模組。主要用於開發，在開發環境中，生成過程的變化可以被熱交換，其他情況一般不會發生變化。重新生成的資源的變化需按 F3+T 才會被應用。",
   "options.extshape.rrp.regenServerData": "重新生成伺服器資料包",
   "options.extshape.rrp.regenServerData.process": "正在重新生成伺服器資料包…",
-  "options.extshape.rrp.regenServerData.description": "重新生成本模組的運行時資源包的伺服器資料包，不影響原版和其他模組。主要用於開發，一般不起作用。重新生成的資源需使用 /data 指令才會被應用。",
+  "options.extshape.rrp.regenServerData.description": "重新生成本模組的運行時資源包的伺服器資料包，不影響原版和其他模組。主要用於開發，在開發環境中，生成過程的變化可以被熱交換，其他情況一般不會發生變化。重新生成的資源的變化需使用 /data 指令才會被應用。",
   "options.extshape.rrp.exportClientResources": "匯出用戶端資源包",
   "options.extshape.rrp.exportClientResources.process": "正在匯出用戶端資源包…",
-  "options.extshape.rrp.exportClientResources.description": "將運行時資源包的用戶端資源匯出到指定的路徑中，以便於像普通的資源包一樣查看其內容。",
+  "options.extshape.rrp.exportClientResources.description": "將運行時資源包的用戶端資源匯出到指定的路徑中，以便於像普通的資源包一樣清楚地查看其內容。",
   "options.extshape.rrp.exportServerData": "匯出伺服器資料包",
   "options.extshape.rrp.exportServerData.process": "正在匯出伺服器資料包…",
-  "options.extshape.rrp.exportServerData.description": "將運行時資源包的伺服器資料匯出到指定的路徑中，以便於像普通的資料包一樣查看其內容。",
+  "options.extshape.rrp.exportServerData.description": "將運行時資源包的伺服器資料匯出到指定的路徑中，以便於像普通的資料包一樣清楚地查看其內容。",
   "options.extshape.rrp.exportFilePath": "匯出檔路徑",
   "options.extshape.rrp.textFieldHeader": "資源將匯出至以下路徑：",
   "options.extshape.rrp.fullPath": "完整路徑如下：%s",
   "options.extshape.rrp.invalidPath": "無效的路徑：%s",
+  "options.extshape.rrp.info": "注意：本頁僅用於調試，大多數情況下對玩家不起作用。如果不確定本頁內容的功能，請直接按下「%s」。",
 
   "options.extshape.reasonable-sorting": "合理排序模組配置",
   "options.extshape.reasonable-sorting.description": "如果您安裝了合理排序模組，你可以定義方塊物品根據其形狀如何排序，這些形狀包括本模組提供的方塊形狀。其他模組提供的方塊並不會受到影響。\n\n你也可以在模組功能表中選擇“Reasonable Sorting”以進入其模組配置介面。\n\n如果此按鈕點擊無響應，可能是合理排序模組未安裝或版本過低。",
