--- a/src/main/resources/assets/extshape/lang/zh_cn.json
+++ b/src/main/resources/assets/extshape/lang/zh_cn.json
@@ -14,73 +14,10 @@
   "block.extshape.?_vertical_stairs": "竖直%s楼梯",
   "block.extshape.?_wall": "%s墙",
 
-  "block.extshape.prefix.acacia": "金合欢木",
-  "block.extshape.prefix.amethyst": "紫水晶",
-  "block.extshape.prefix.birch": "白桦木",
-  "block.extshape.prefix.brick": "红砖",
-  "block.extshape.prefix.chiseled_nether_brick": "錾制下界砖",
-  "block.extshape.prefix.chiseled_quartz": "錾制石英",
-  "block.extshape.prefix.chiseled_stone_brick": "錾制石砖",
-  "block.extshape.prefix.clay": "黏土",
-  "block.extshape.prefix.coal": "煤炭",
-  "block.extshape.prefix.crimson": "绯红木",
-  "block.extshape.prefix.cut_copper": "切制铜",
-  "block.extshape.prefix.dark_oak": "深色橡木",
-  "block.extshape.prefix.deepslate_brick": "深板岩砖",
-  "block.extshape.prefix.deepslate_tile": "深板岩瓦",
-  "block.extshape.prefix.diamond": "钻石",
-  "block.extshape.prefix.dripstone": "滴水石",
-  "block.extshape.prefix.emerald": "绿宝石",
-  "block.extshape.prefix.end_stone_brick": "末地石砖",
-  "block.extshape.prefix.exposed_copper": "斑驳的铜",
-  "block.extshape.prefix.exposed_cut_copper": "斑驳的切制铜",
-  "block.extshape.prefix.gold": "金",
-  "block.extshape.prefix.honeycomb": "蜜脾",
-  "block.extshape.prefix.iron": "铁",
-  "block.extshape.prefix.jungle": "丛林木",
-  "block.extshape.prefix.lapis": "青金石",
-  "block.extshape.prefix.mangrove": "红树木",
-  "block.extshape.prefix.moss": "苔藓",
-  "block.extshape.prefix.mossy_stone_brick": "苔石砖",
-  "block.extshape.prefix.mud_brick": "泥砖",
-  "block.extshape.prefix.nether_brick": "下界砖",
-  "block.extshape.prefix.nether_wart": "下界疣",
-  "block.extshape.prefix.netherite": "下界合金",
-  "block.extshape.prefix.oak": "橡木",
-  "block.extshape.prefix.oxidized_copper": "氧化的铜",
-  "block.extshape.prefix.oxidized_cut_copper": "氧化的切制铜",
-  "block.extshape.prefix.polished_blackstone_brick": "磨制黑石砖",
-  "block.extshape.prefix.prismarine_brick": "海晶石砖",
-  "block.extshape.prefix.purpur": "紫珀",
-  "block.extshape.prefix.quartz": "石英",
-  "block.extshape.prefix.quartz_brick": "石英砖",
-  "block.extshape.prefix.raw_copper": "粗铜",
-  "block.extshape.prefix.raw_gold": "粗金",
-  "block.extshape.prefix.raw_iron": "粗铁",
-  "block.extshape.prefix.red_nether_brick": "红色下界砖",
-  "block.extshape.prefix.sculk": "幽匿",
-  "block.extshape.prefix.smooth_quartz": "平滑石英",
-  "block.extshape.prefix.snow": "雪",
-  "block.extshape.prefix.spruce": "云杉木",
-  "block.extshape.prefix.stone_brick": "石砖",
-  "block.extshape.prefix.unknown": "未知",
-  "block.extshape.prefix.warped": "诡异木",
-  "block.extshape.prefix.warped_wart": "诡异疣",
-  "block.extshape.prefix.waxed_copper": "涂蜡铜",
-  "block.extshape.prefix.waxed_cut_copper": "涂蜡切制铜",
-  "block.extshape.prefix.waxed_exposed_copper": "斑驳的涂蜡铜",
-  "block.extshape.prefix.waxed_exposed_cut_copper": "斑驳的涂蜡切制铜",
-  "block.extshape.prefix.waxed_oxidized_copper": "氧化的涂蜡铜",
-  "block.extshape.prefix.waxed_oxidized_cut_copper": "氧化的涂蜡切制铜",
-  "block.extshape.prefix.waxed_weathered_copper": "锈蚀的涂蜡铜",
-  "block.extshape.prefix.waxed_weathered_cut_copper": "锈蚀的涂蜡切制铜",
-  "block.extshape.prefix.weathered_copper": "锈蚀的铜",
-  "block.extshape.prefix.weathered_cut_copper": "锈蚀的切制铜",
-
   "itemGroup.extshape.colorful_blocks": "\u00a79扩展方块形状：\u00a7r彩色方块",
   "itemGroup.extshape.other_blocks": "\u00a79扩展方块形状：\u00a7r其他",
   "itemGroup.extshape.stone_blocks": "\u00a79扩展方块形状：\u00a7r石质方块",
-  "itemGroup.extshape.wooden_blocks": "\u00a79扩展方块形状：\u00a7r木制方块",
+  "itemGroup.extshape.wooden_blocks": "\u00a79扩展方块形状：\u00a7r木制和竹制方块",
 
   "modmenu.descriptionTranslation.extshape": "本模组为许多原版方块添加了更多形状，包括原版不存在的形状，如垂直台阶、垂直楼梯和横条。大多数方块都具有类似原版的行为，就像其基础方块一样。例如，基岩楼梯和基岩台阶像基岩本身一样可以防爆防凋灵，羊毛栅栏和羊毛栅栏门可燃且可以被剪刀剪。借助此模组，你可以制作出更加精美的建筑，玩生存也会更加有趣。",
   "modmenu.summaryTranslation.extshape": "为许多原版的方块添加了更多形状，且具有类似原版的行为。",
@@ -107,7 +44,8 @@
   "options.extshape.confirm.noGroups": "您的“%s”和“%s”都设置为“%s”，这意味着您在创造模式下，无法从创造模式物品栏中获取模组中的物品。确定要继续吗？",
   "options.extshape.confirm.redo": "我再考虑下",
   "options.extshape.registerBlockFamilies": "注册BlockFamilies",
-  "options.extshape.registerBlockFamilies.description": "一般不建议开启。如果启用，初始化Minecraft的时候，本模组中的方块与Minecraft的原版方块之间的关系将会注册到BlockFamilies中。BlockFamilies的注册表可以被其他模组识别，但有可能导致不稳定，因此一般不需要开启。\n\n重启游戏后生效。",
+  "options.extshape.registerBlockFamilies.description": "一般不建议开启。如果启用，初始化Minecraft的时候，本模组中的方块与Minecraft的原版方块之间的关系将会注册到BlockFamilies中。BlockFamilies的注册表可以被其他模组识别，但有可能导致不稳定，因此一般不需要开启。",
+  "options.extshape.requires_restart": "重启游戏后生效。",
 
   "options.extshape.rrp.title": "运行时资源包设置",
   "options.extshape.rrp.description": "管理扩展方块形状模组的运行时资源包。",
