--- a/src/main/resources/assets/extshape/lang/zh_tw.json
+++ b/src/main/resources/assets/extshape/lang/zh_tw.json
@@ -14,70 +14,7 @@
   "block.extshape.?_vertical_stairs": "豎直%s階梯",
   "block.extshape.?_vertical_quarter_piece": "%s縱條",
 
-  "block.extshape.prefix.acacia": "相思木",
-  "block.extshape.prefix.amethyst": "紫水晶",
-  "block.extshape.prefix.birch": "樺木",
-  "block.extshape.prefix.brick": "紅磚",
-  "block.extshape.prefix.chiseled_nether_brick": "浮雕地獄磚",
-  "block.extshape.prefix.chiseled_quartz": "浮雕石英",
-  "block.extshape.prefix.chiseled_stone_brick": "浮雕石磚",
-  "block.extshape.prefix.clay": "黏土",
-  "block.extshape.prefix.coal": "煤炭",
-  "block.extshape.prefix.crimson": "緋紅蕈木",
-  "block.extshape.prefix.cut_copper": "切製銅",
-  "block.extshape.prefix.dark_oak": "黑橡木",
-  "block.extshape.prefix.deepslate_brick": "深板岩磚",
-  "block.extshape.prefix.deepslate_tile": "深板岩磚瓦",
-  "block.extshape.prefix.diamond": "鑽石",
-  "block.extshape.prefix.dripstone": "鐘乳石",
-  "block.extshape.prefix.emerald": "綠寶石",
-  "block.extshape.prefix.end_stone_brick": "終界石磚",
-  "block.extshape.prefix.exposed_copper": "斑駁的銅",
-  "block.extshape.prefix.exposed_cut_copper": "斑駁的切製銅",
-  "block.extshape.prefix.gold": "黃金",
-  "block.extshape.prefix.honeycomb": "蜂巢",
-  "block.extshape.prefix.iron": "鐵",
-  "block.extshape.prefix.jungle": "叢林木",
-  "block.extshape.prefix.lapis": "青金石",
-  "block.extshape.prefix.mangrove": "紅樹林木",
-  "block.extshape.prefix.moss": "苔蘚",
-  "block.extshape.prefix.mossy_stone_brick": "青苔石磚",
-  "block.extshape.prefix.mud_brick": "泥磚",
-  "block.extshape.prefix.nether_brick": "地獄磚",
-  "block.extshape.prefix.nether_wart": "地獄疙瘩",
-  "block.extshape.prefix.netherite": "獄髓",
-  "block.extshape.prefix.oak": "橡木",
-  "block.extshape.prefix.oxidized_copper": "氧化的銅",
-  "block.extshape.prefix.oxidized_cut_copper": "氧化的切製銅",
-  "block.extshape.prefix.polished_blackstone_brick": "拋光黑石磚",
-  "block.extshape.prefix.prismarine_brick": "海磷石磚",
-  "block.extshape.prefix.purpur": "紫珀",
-  "block.extshape.prefix.quartz": "石英",
-  "block.extshape.prefix.quartz_brick": "石英磚",
-  "block.extshape.prefix.raw_copper": "銅原礦",
-  "block.extshape.prefix.raw_gold": "金原礦",
-  "block.extshape.prefix.raw_iron": "鐵原礦",
-  "block.extshape.prefix.red_nether_brick": "紅地獄磚",
-  "block.extshape.prefix.sculk": "伏聆",
-  "block.extshape.prefix.smooth_quartz": "平滑石英",
-  "block.extshape.prefix.snow": "雪",
-  "block.extshape.prefix.spruce": "杉木",
-  "block.extshape.prefix.stone_brick": "石磚",
-  "block.extshape.prefix.unknown": "未知",
-  "block.extshape.prefix.warped": "扭曲蕈木",
-  "block.extshape.prefix.warped_wart": "扭曲疙瘩",
-  "block.extshape.prefix.waxed_copper": "上蠟的銅",
-  "block.extshape.prefix.waxed_cut_copper": "上蠟的切製銅",
-  "block.extshape.prefix.waxed_exposed_copper": "上蠟的斑駁銅",
-  "block.extshape.prefix.waxed_exposed_cut_copper": "上蠟的斑駁切製銅",
-  "block.extshape.prefix.waxed_oxidized_copper": "上蠟的氧化銅",
-  "block.extshape.prefix.waxed_oxidized_cut_copper": "上蠟的氧化切製銅",
-  "block.extshape.prefix.waxed_weathered_copper": "上蠟的風化銅",
-  "block.extshape.prefix.waxed_weathered_cut_copper": "上蠟的風化切製銅",
-  "block.extshape.prefix.weathered_copper": "風化的銅",
-  "block.extshape.prefix.weathered_cut_copper": "風化的切製銅",
-
-  "itemGroup.extshape.wooden_blocks": "\u00a79擴展方塊形狀：\u00a7r木製方塊",
+  "itemGroup.extshape.wooden_blocks": "\u00a79擴展方塊形狀：\u00a7r木製和竹製方塊",
   "itemGroup.extshape.colorful_blocks": "\u00a79擴展方塊形狀：\u00a7r彩色方塊",
   "itemGroup.extshape.stone_blocks": "\u00a79擴展方塊形狀：\u00a7r石質方塊",
   "itemGroup.extshape.other_blocks": "\u00a79擴展方塊形狀：\u00a7r其他",
@@ -107,7 +44,8 @@
   "options.extshape.confirm.noGroups": "您的「%s」和「%s」都設置為「%s」，這意味著您在創造模式下，無法從創造模式物品欄中獲取模組中的物品。確定要繼續嗎？",
   "options.extshape.confirm.redo": "我再考慮下",
   "options.extshape.registerBlockFamilies": "註冊 BlockFamilies",
-  "options.extshape.registerBlockFamilies.description": "一般不建議開啟。如果啟用，初始化 Minecraft 的時候，本模組中的方塊與 Minecraft 的原版方塊之間的關係將會註冊到 BlockFamilies 中。BlockFamilies 的註冊表可以被其他模組識別，但有可能導致不穩定，因此一般不需要開啟。\n\n重啟遊戲後生效。",
+  "options.extshape.registerBlockFamilies.description": "一般不建議開啟。如果啟用，初始化 Minecraft 的時候，本模組中的方塊與 Minecraft 的原版方塊之間的關係將會註冊到 BlockFamilies 中。BlockFamilies 的註冊表可以被其他模組識別，但有可能導致不穩定，因此一般不需要開啟。",
+  "options.extshape.requires_restart": "重啟遊戲後生效。",
 
   "options.extshape.rrp.title": "運行時資源包設置",
   "options.extshape.rrp.description": "管理擴展方塊形狀模組的運行時資源包。",
