--- a/src/main/resources/assets/extshape/lang/zh_cn.json
+++ b/src/main/resources/assets/extshape/lang/zh_cn.json
@@ -44,7 +44,8 @@
   "options.extshape.confirm.noGroups": "您的“%s”和“%s”都设置为“%s”，这意味着您在创造模式下，无法从创造模式物品栏中获取模组中的物品。确定要继续吗？",
   "options.extshape.confirm.redo": "我再考虑下",
   "options.extshape.registerBlockFamilies": "注册BlockFamilies",
-  "options.extshape.registerBlockFamilies.description": "一般不建议开启。如果启用，初始化Minecraft的时候，本模组中的方块与Minecraft的原版方块之间的关系将会注册到BlockFamilies中。BlockFamilies的注册表可以被其他模组识别，但有可能导致不稳定，因此一般不需要开启。\n\n重启游戏后生效。",
+  "options.extshape.registerBlockFamilies.description": "一般不建议开启。如果启用，初始化Minecraft的时候，本模组中的方块与Minecraft的原版方块之间的关系将会注册到BlockFamilies中。BlockFamilies的注册表可以被其他模组识别，但有可能导致不稳定，因此一般不需要开启。",
+  "options.extshape.requires_restart": "重启游戏后生效。",
 
   "options.extshape.rrp.title": "运行时资源包设置",
   "options.extshape.rrp.description": "管理扩展方块形状模组的运行时资源包。",
