更新Forge，从 1.19.2 优选，并适应 Forge

--- a/src/main/resources/assets/extshape/lang/zh_hk.json
+++ b/src/main/resources/assets/extshape/lang/zh_hk.json
@@ -14,69 +14,6 @@
   "block.extshape.?_vertical_stairs": "豎直%s樓梯",
   "block.extshape.?_vertical_quarter_piece": "%s縱條",
 
-  "block.extshape.prefix.acacia": "相思木",
-  "block.extshape.prefix.amethyst": "紫水晶",
-  "block.extshape.prefix.birch": "樺木",
-  "block.extshape.prefix.brick": "紅磚",
-  "block.extshape.prefix.chiseled_nether_brick": "浮雕地獄磚",
-  "block.extshape.prefix.chiseled_quartz": "浮雕石英",
-  "block.extshape.prefix.chiseled_stone_brick": "浮雕石",
-  "block.extshape.prefix.clay": "黏土",
-  "block.extshape.prefix.coal": "煤炭",
-  "block.extshape.prefix.crimson": "猩紅菌木",
-  "block.extshape.prefix.cut_copper": "切製銅",
-  "block.extshape.prefix.dark_oak": "黑橡木",
-  "block.extshape.prefix.deepslate_brick": "深板岩磚",
-  "block.extshape.prefix.deepslate_tile": "深板岩瓦",
-  "block.extshape.prefix.diamond": "鑽石",
-  "block.extshape.prefix.dripstone": "滴水石",
-  "block.extshape.prefix.emerald": "綠寶石",
-  "block.extshape.prefix.end_stone_brick": "終界石磚",
-  "block.extshape.prefix.exposed_copper": "斑駁嘅銅",
-  "block.extshape.prefix.exposed_cut_copper": "斑駁嘅切製銅",
-  "block.extshape.prefix.gold": "金",
-  "block.extshape.prefix.honeycomb": "蜂巢蜜",
-  "block.extshape.prefix.iron": "鐵",
-  "block.extshape.prefix.jungle": "叢林木",
-  "block.extshape.prefix.lapis": "青金石",
-  "block.extshape.prefix.mangrove": "紅樹木",
-  "block.extshape.prefix.moss": "青苔",
-  "block.extshape.prefix.mossy_stone_brick": "青苔石磚",
-  "block.extshape.prefix.mud_brick": "泥磚",
-  "block.extshape.prefix.nether_brick": "地獄磚",
-  "block.extshape.prefix.nether_wart": "地獄孢子",
-  "block.extshape.prefix.netherite": "地獄合金",
-  "block.extshape.prefix.oak": "橡木",
-  "block.extshape.prefix.oxidized_copper": "氧化嘅銅",
-  "block.extshape.prefix.oxidized_cut_copper": "氧化嘅切製銅",
-  "block.extshape.prefix.polished_blackstone_brick": "拋光黑石磚",
-  "block.extshape.prefix.prismarine_brick": "海磷石磚",
-  "block.extshape.prefix.purpur": "紫珀",
-  "block.extshape.prefix.quartz": "石英",
-  "block.extshape.prefix.quartz_brick": "磚紋石英",
-  "block.extshape.prefix.raw_copper": "粗銅",
-  "block.extshape.prefix.raw_gold": "粗金",
-  "block.extshape.prefix.raw_iron": "粗鐵",
-  "block.extshape.prefix.red_nether_brick": "紅色地獄磚",
-  "block.extshape.prefix.sculk": "沉靈",
-  "block.extshape.prefix.smooth_quartz": "平滑石英",
-  "block.extshape.prefix.snow": "雪",
-  "block.extshape.prefix.spruce": "杉木",
-  "block.extshape.prefix.stone_brick": "石磚",
-  "block.extshape.prefix.unknown": "未知",
-  "block.extshape.prefix.warped": "迷離菌木",
-  "block.extshape.prefix.warped_wart": "迷離孢子",
-  "block.extshape.prefix.waxed_copper": "打蠟嘅銅",
-  "block.extshape.prefix.waxed_cut_copper": "打蠟嘅切製銅",
-  "block.extshape.prefix.waxed_exposed_copper": "打蠟嘅斑駁銅",
-  "block.extshape.prefix.waxed_exposed_cut_copper": "打蠟嘅斑駁切製銅",
-  "block.extshape.prefix.waxed_oxidized_copper": "打蠟嘅氧化銅",
-  "block.extshape.prefix.waxed_oxidized_cut_copper": "打蠟嘅氧化切製銅",
-  "block.extshape.prefix.waxed_weathered_copper": "打蠟嘅生鏽銅",
-  "block.extshape.prefix.waxed_weathered_cut_copper": "打蠟嘅生鏽切製銅",
-  "block.extshape.prefix.weathered_copper": "生鏽嘅銅",
-  "block.extshape.prefix.weathered_cut_copper": "生鏽嘅切製銅",
-
   "itemGroup.extshape.wooden_blocks": "\u00a79擴展方塊形狀：\u00a7r木製方塊",
   "itemGroup.extshape.colorful_blocks": "\u00a79擴展方塊形狀：\u00a7r彩色方塊",
   "itemGroup.extshape.stone_blocks": "\u00a79擴展方塊形狀：\u00a7r石質方塊",
@@ -87,9 +24,14 @@
 
   "options.extshape.title": "擴展方塊形狀模組配置",
   "options.extshape.addToVanillaGroups": "添加至原版物品組",
-  "options.extshape.addToVanillaGroups.tooltip": "將本模組添加嘅方塊添加至 Minecraft 嘅原版創造模式物品組中。例如，所有階梯和半磚都加入「%s」物品組，欄杆和牆加入「%s」物品組，按鈕和壓力板則加入「%s」物品組。物品係以定義時順序加入，所以可能會有啲混亂，但是如果你安裝合理排序模組，則推薦開啟此項。",
-  "options.extshape.showSpecificGroups": "顯示專門物品組",
-  "options.extshape.showSpecificGroups.tooltip": "添加啲專用物品組以顯示所有擁有不同形狀嘅方塊（含原版和模組中），依啲方塊按照其基礎方塊的順序排列，基礎方塊相同嘅方塊顯示在一起。",
+  "options.extshape.addToVanillaGroups.tooltip": "如果啟用，此模組中的方塊將會直接添加到 Minecraft 的原版物品組中，例如%s、%s和%s。方塊會直接添加到其基礎方塊後面，這樣你可以方便地找到同一基礎方塊的不同形狀的方塊。默認情況下，會添加所有的形狀。你可以在下面的文本框中指定添加哪些形狀。",
+  "options.extshape.showSpecificGroups": "顯示專用物品組",
+  "options.extshape.showSpecificGroups.tooltip": "添加4個專用物品組以顯示所有擁有不同形狀嘅方塊（含原版和模組中），依啲方塊按照其基礎方塊的順序排列，基礎方塊相同嘅方塊顯示在一起。",
+  "options.extshape.shapesToAddToVanilla": "添加到原版物品組中的形狀",
+  "options.extshape.shapesToAddToVanilla.description": "需要將哪些形狀的方塊添加到原版物品組中？（用空格間隔。）",
+  "options.extshape.shapesInSpecificGroups": "專用物品組中的形狀",
+  "options.extshape.shapesInSpecificGroups.description": "將哪些形狀的方塊添加到本模組的專用物品組中？（用空格間隔。）",
+  "options.extshape.reset": "重置",
   "options.extshape.preventWoodenWallRecipes": "避免木牆合成配方",
   "options.extshape.preventWoodenWallRecipes.tooltip": "避免木牆嘅合成配方，以解決同木質地板門嘅配方撞車問題。若開啟，你將冇法合成木牆。如果你裝有可以修復合成表撞車嘅模組，可以將本選項關閉。",
   "options.extshape.avoidSomeButtonRecipes": "避免部分按鈕配方",
@@ -102,26 +44,28 @@
   "options.extshape.confirm.noGroups": "你嘅「%s」和「%s」都設置為「%s」，這意味著你玩創造模式時，無法從創造模式物品欄中獲取模組中嘅物品。你真係要繼續？",
   "options.extshape.confirm.redo": "我再考慮一下",
   "options.extshape.registerBlockFamilies": "註冊 BlockFamilies",
-  "options.extshape.registerBlockFamilies.description": "將本模組內的方塊關係註冊到 Minecraft 原版的 BlockFamilies 中。BlockFamilies 可能會被其他模組識別，但是如果其他模組也使用這些 BlockFamilies 則有可能出現一些問題。一般冇必要開啟。\n重啟遊戲後生效。",
+  "options.extshape.registerBlockFamilies.description": "一般不建議開啟。如果啟用，初始化 Minecraft 的時候，本模組中的方塊與 Minecraft 的原版方塊之間的關係將會註冊到 BlockFamilies 中。BlockFamilies 的註冊表可以被其他模組識別，但有可能導致不穩定，因此一般不需要開啟。",
+  "options.extshape.requires_restart": "重啟遊戲後生效。",
 
   "options.extshape.rrp.title": "運行時資源包設置",
   "options.extshape.rrp.description": "管理擴展方塊形狀模組中嘅運行時資源包。",
   "options.extshape.rrp.regenClientResources": "重新生成用戶端資源包",
   "options.extshape.rrp.regenClientResources.process": "正在重新生成用戶端資源包…",
-  "options.extshape.rrp.regenClientResources.description": "重新生成本模組嘅運行時資源包嘅用戶端資源包，唔會影響原版同其他模組。主要用於開發，一般不起效果。重新生成的資源需按 F3+T 才會被應用。",
+  "options.extshape.rrp.regenClientResources.description": "重新生成本模組嘅運行時資源包嘅用戶端資源包，唔會影響原版同其他模組。主要用於開發，在開發環境中，生成過程的變化可以被熱交換，其他情況一般不會發生變化。重新生成的資源的變化需按 F3+T 才會被應用。",
   "options.extshape.rrp.regenServerData": "重新生成伺服器數據包",
   "options.extshape.rrp.regenServerData.process": "正在重新生成伺服器數據包…",
-  "options.extshape.rrp.regenServerData.description": "重新生成本模組嘅運行時資源包開伺服器數據包，唔會影響原版同其他模組。主要用於開發，一般不起作用。重新生成的資源需使用 /data 指令才會被應用。",
+  "options.extshape.rrp.regenServerData.description": "重新生成本模組嘅運行時資源包開伺服器數據包，唔會影響原版同其他模組。主要用於開發，在開發環境中，生成過程的變化可以被熱交換，其他情況一般不會發生變化。重新生成的資源的變化需使用 /data 指令才會被應用。",
   "options.extshape.rrp.exportClientResources": "匯出用戶端資源包",
   "options.extshape.rrp.exportClientResources.process": "正在匯出用戶端資源包…",
-  "options.extshape.rrp.exportClientResources.description": "將運行時資源包嘅用戶端資源匯出到指定路徑中，以便於像通常嘅資源包一樣查看其內容。",
+  "options.extshape.rrp.exportClientResources.description": "將運行時資源包嘅用戶端資源匯出到指定路徑中，以便於像通常嘅資源包一樣清楚地查看其內容。",
   "options.extshape.rrp.exportServerData": "匯出伺服器數據包",
   "options.extshape.rrp.exportServerData.process": "正在匯出伺服器數據包…",
-  "options.extshape.rrp.exportServerData.description": "將運行時資源包嘅伺服器數據匯出到指定路徑中，以便於像通常嘅數據包一樣查看其內容。",
+  "options.extshape.rrp.exportServerData.description": "將運行時資源包嘅伺服器數據匯出到指定路徑中，以便於像通常嘅數據包一樣清楚地查看其內容。",
   "options.extshape.rrp.exportFilePath": "匯出檔路徑",
   "options.extshape.rrp.textFieldHeader": "資源將匯出至以下路徑：",
   "options.extshape.rrp.fullPath": "完整路徑如下：%s",
   "options.extshape.rrp.invalidPath": "無效路徑：%s",
+  "options.extshape.rrp.info": "注意：本頁僅用於調試，大多數情況下對玩家不起作用。如果不確定本頁內容的功能，請直接按下「%s」。",
 
   "options.extshape.reasonable-sorting": "合理排序模組配置",
   "options.extshape.reasonable-sorting.description": "如果你安裝咗合理排序模組，你可以定義方塊物品根據其形狀如何排序，這些形狀包括本模組提供的方塊形狀。其他模組提供嘅方塊並唔會受到影響。\n\n你也可以喺模組功能表中選擇“Reasonable Sorting”以進入其模組配置介面。\n\n如果此按鈕點擊冇響應，可能係合理排序模組版本未安裝或過低。",
