--- a/src/main/resources/assets/extshape/lang/en_us.json
+++ b/src/main/resources/assets/extshape/lang/en_us.json
@@ -47,26 +47,6 @@
   "options.extshape.registerBlockFamilies.description": "Usually not recommended to open. If enabled, when initializing Minecraft, the relations of the block in this mod to Minecraft's vanilla blocks will be registered in BlockFamilies. The BlockFamilies registry may be identified by some mods, but may cause potential instability. You usually do not need to enable it.",
   "options.extshape.requires_restart": "Takes effect after restarting game.",
 
-  "options.extshape.rrp.title": "Runtime Resource Pack settings",
-  "options.extshape.rrp.description": "Manage the Runtime Resource Pack of Extended Block Shapes mod.",
-  "options.extshape.rrp.regenClientResources": "Regenerate client resources",
-  "options.extshape.rrp.regenClientResources.process": "Regenerating client resources...",
-  "options.extshape.rrp.regenClientResources.description": "Regenerate the client resources of the runtime resource pack of this mod, not influencing vanilla and other mods. This is primitively used for development. In the development environment, the changes in the generation process may be hot-swapped, otherwise no changes are expected to happen. Changes in regenerated resources take affect only after pressing F3+T.",
-  "options.extshape.rrp.regenServerData": "Regenerate server data",
-  "options.extshape.rrp.regenServerData.process": "Regenerating server data...",
-  "options.extshape.rrp.regenServerData.description": "Regenerate the server data of the runtime resource pack of this mod, not influencing vanilla and other mods. This is primitively used for development. In the development environment, the changes in the generation process may be hot-swapped, otherwise no changes are expected to happen. Changes in regenerated resources take affect only after using \"/data\" command.",
-  "options.extshape.rrp.exportClientResources": "Export client resource pack",
-  "options.extshape.rrp.exportClientResources.process": "Exporting client resource pack...",
-  "options.extshape.rrp.exportClientResources.description": "Export client resources of runtime resource pack in the specified path so that you can clearly see its content as if it was a regular resource pack.",
-  "options.extshape.rrp.exportServerData": "Export server data",
-  "options.extshape.rrp.exportServerData.process": "Exporting server data...",
-  "options.extshape.rrp.exportServerData.description": "Export server data of runtime resource pack in the specified path so that you can clearly see its content as if it was a regular data pack.",
-  "options.extshape.rrp.exportFilePath": "Export file path",
-  "options.extshape.rrp.textFieldHeader": "Resources will be exported at:",
-  "options.extshape.rrp.fullPath": "Full path: %s",
-  "options.extshape.rrp.invalidPath": "Invalid path: %s",
-  "options.extshape.rrp.info": "Notice: this page is intended for only debugging, and not useful for players in most situations. If you are not sure what you are doing by entering this page, please click \"%1$s\".",
-
   "options.extshape.reasonable-sorting": "Reasonable Sorting mod config",
   "options.extshape.reasonable-sorting.description": "If you installed Reasonable Sorting mod, you can define how block items are sorted according to their shape, including shapes provided this mod. It may not affect blocks provided by other mods.\n\nYou can also access the mod config screen of Reasonable Sorting by selecting the mod in the mod menu.\n\nIf there is no response on clicking this button, it's likely that you have not installed Reasonable Sorting mod or the version is too low.",
   "options.extshape.dataChanged": "Server data changed. Regenerated server data?",
@@ -79,5 +59,9 @@
   "message.extshape.recipe_conflict.exception": "Exceptions were found when detecting recipe conflict",
   "message.extshape.recipe_conflict.finish.none": "Finished checking. In total no recipe conflicts have been found.",
   "message.extshape.recipe_conflict.finish.single": "Finished checking. In total %s recipe conflict has been found.",
-  "message.extshape.recipe_conflict.finish.plural": "Finished checking. In total %s recipe conflicts have been found."
+  "message.extshape.recipe_conflict.finish.plural": "Finished checking. In total %s recipe conflicts have been found.",
+
+  "modmenu.nameTranslation.extshape": "Extended Block Shapes",
+
+  "options.extshape.addToVanillaGroups.blockus": "Please note: to find the extended shapes of blocks in Blockus mod in the creative inventory, you have to enable \"Add To Vanilla Groups\". The blocks only display in item groups of Blockus. There are no specific groups for extended shapes of blocks in Blockus mod."
 }
