--- a/src/main/resources/assets/extshape/lang/zh_tw.json
+++ b/src/main/resources/assets/extshape/lang/zh_tw.json
@@ -47,26 +47,6 @@
   "options.extshape.registerBlockFamilies.description": "一般不建議開啟。如果啟用，初始化 Minecraft 的時候，本模組中的方塊與 Minecraft 的原版方塊之間的關係將會註冊到 BlockFamilies 中。BlockFamilies 的註冊表可以被其他模組識別，但有可能導致不穩定，因此一般不需要開啟。",
   "options.extshape.requires_restart": "重啟遊戲後生效。",
 
-  "options.extshape.rrp.title": "運行時資源包設置",
-  "options.extshape.rrp.description": "管理擴展方塊形狀模組的運行時資源包。",
-  "options.extshape.rrp.regenClientResources": "重新生成用戶端資源包",
-  "options.extshape.rrp.regenClientResources.process": "正在重新生成用戶端資源包…",
-  "options.extshape.rrp.regenClientResources.description": "重新生成本模組的運行時資源包的用戶端資源包，不影響原版和其他模組。主要用於開發，在開發環境中，生成過程的變化可以被熱交換，其他情況一般不會發生變化。重新生成的資源的變化需按 F3+T 才會被應用。",
-  "options.extshape.rrp.regenServerData": "重新生成伺服器資料包",
-  "options.extshape.rrp.regenServerData.process": "正在重新生成伺服器資料包…",
-  "options.extshape.rrp.regenServerData.description": "重新生成本模組的運行時資源包的伺服器資料包，不影響原版和其他模組。主要用於開發，在開發環境中，生成過程的變化可以被熱交換，其他情況一般不會發生變化。重新生成的資源的變化需使用 /data 指令才會被應用。",
-  "options.extshape.rrp.exportClientResources": "匯出用戶端資源包",
-  "options.extshape.rrp.exportClientResources.process": "正在匯出用戶端資源包…",
-  "options.extshape.rrp.exportClientResources.description": "將運行時資源包的用戶端資源匯出到指定的路徑中，以便於像普通的資源包一樣清楚地查看其內容。",
-  "options.extshape.rrp.exportServerData": "匯出伺服器資料包",
-  "options.extshape.rrp.exportServerData.process": "正在匯出伺服器資料包…",
-  "options.extshape.rrp.exportServerData.description": "將運行時資源包的伺服器資料匯出到指定的路徑中，以便於像普通的資料包一樣清楚地查看其內容。",
-  "options.extshape.rrp.exportFilePath": "匯出檔路徑",
-  "options.extshape.rrp.textFieldHeader": "資源將匯出至以下路徑：",
-  "options.extshape.rrp.fullPath": "完整路徑如下：%s",
-  "options.extshape.rrp.invalidPath": "無效的路徑：%s",
-  "options.extshape.rrp.info": "注意：本頁僅用於調試，大多數情況下對玩家不起作用。如果不確定本頁內容的功能，請直接按下「%s」。",
-
   "options.extshape.reasonable-sorting": "合理排序模組配置",
   "options.extshape.reasonable-sorting.description": "如果您安裝了合理排序模組，你可以定義方塊物品根據其形狀如何排序，這些形狀包括本模組提供的方塊形狀。其他模組提供的方塊並不會受到影響。\n\n你也可以在模組功能表中選擇“Reasonable Sorting”以進入其模組配置介面。\n\n如果此按鈕點擊無響應，可能是合理排序模組未安裝或版本過低。",
   "options.extshape.dataChanged": "伺服器資料已改變，是否重新生成伺服器資料？",
@@ -79,5 +59,9 @@
   "message.extshape.recipe_conflict.exception": "檢測合成表撞車時出現未知錯誤",
   "message.extshape.recipe_conflict.finish.none": "檢測完成，未檢測到合成表撞車",
   "message.extshape.recipe_conflict.finish.single": "檢測完成，共檢測到%s個合成表撞車",
-  "message.extshape.recipe_conflict.finish.plural": "檢測完成，共檢測到%s個合成表撞車"
+  "message.extshape.recipe_conflict.finish.plural": "檢測完成，共檢測到%s個合成表撞車",
+
+  "modmenu.nameTranslation.extshape": "擴展方塊形狀",
+
+  "options.extshape.addToVanillaGroups.blockus": "請注意：如要在創造模式中找到 Blockus 模組中的擴展形狀的方塊，你需要啟用「添加至原版物品組」。這些方塊只會顯示在 Blockus 的物品組中。Blockus 方塊的擴展形狀的方塊沒有專用物品組。"
 }
