--- a/src/main/resources/assets/extshape/lang/zh_cn.json
+++ b/src/main/resources/assets/extshape/lang/zh_cn.json
@@ -81,5 +81,7 @@
   "message.extshape.recipe_conflict.finish.single": "检测完成，共检测到%s个合成表撞车",
   "message.extshape.recipe_conflict.finish.plural": "检测完成，共检测到%s个合成表撞车",
 
-  "modmenu.nameTranslation.extshape": "扩展方块形状"
+  "modmenu.nameTranslation.extshape": "扩展方块形状",
+
+  "options.extshape.addToVanillaGroups.blockus": "请注意：如要在创造模式物品栏中找到Blockus模组中的扩展形状的方块，你需要启用“添加至原版物品组”。这些方块只会显示在Blockus的物品组中。Blockus方块的扩展形状的方块没有专用物品组。"
 }
