--- a/with_blockus/src/main/resources/assets/extshape_blockus/lang/zh_cn.json
+++ b/with_blockus/src/main/resources/assets/extshape_blockus/lang/zh_cn.json
@@ -1,4 +1,5 @@
 {
   "modmenu.nameTranslation.extshape_blockus": "扩展方块形状 - Blockus",
-  "modmenu.descriptionTranslation.extshape_blockus": "为Blockus模组添加扩展方块形状！"
+  "modmenu.descriptionTranslation.extshape_blockus": "为Blockus模组添加扩展方块形状！",
+  "block.extshape_blockus.deprecated": "已弃用的方块。请通过合成将其替换为有相同名称的另一个方块。"
 }
