--- a/src/main/resources/assets/extshape/lang/en_us.json
+++ b/src/main/resources/assets/extshape/lang/en_us.json
@@ -25,8 +25,10 @@
   "options.extshape.title": "Configuration of Extended Block Shapes Mod",
   "options.extshape.addToVanillaGroups": "Add to vanilla groups",
   "options.extshape.addToVanillaGroups.tooltip": "If enabled, blocks of this mod will directly display in Minecraft's vanilla item groups, such as %s, %s and %s. The blocks are appended after their base blocks so you can quickly find blocks of a same base block in different shapes. By default, all shapes will be added in the vanilla item group. You may specify which shapes to be added in vanilla groups in the text box below.",
+  "options.extshape.addToVanillaGroups.warning_for_1.20": "In this version, this option does not support turning off. Please find the items in vanilla item groups.",
   "options.extshape.showSpecificGroups": "Show specific groups",
   "options.extshape.showSpecificGroups.tooltip": "Add four specific item groups to display blocks that have different shapes (including vanilla and mod) in a fancy order. They are sorted by their base blocks, and blocks based on a same block are displayed together.",
+  "options.extshape.showSpecificGroups.warning_for_1.20": "In this version, configurable specific groups are not supported. Please find the items in vanilla item groups.",
   "options.extshape.shapesToAddToVanilla": "Shapes to add to vanilla",
   "options.extshape.shapesToAddToVanilla.description": "Add which shapes to vanilla item groups? (Separated with space.)",
   "options.extshape.shapesInSpecificGroups": "Shapes in specific group",
