--- a/src/main/resources/assets/extshape/lang/lzh.json
+++ b/src/main/resources/assets/extshape/lang/lzh.json
@@ -25,8 +25,10 @@
   "options.extshape.title": "塊形之擴改囊配製",
   "options.extshape.addToVanillaGroups": "咸入本設",
   "options.extshape.addToVanillaGroups.tooltip": "如啟，塊于是囊者入本設之組，如%s、%s、%s者。是塊者，追於其基礎，以尋多形之共基礎者也。各形咸添，亦可指和何形以添，于纂於下文。",
+  "options.extshape.addToVanillaGroups.warning_for_1.20": "此版無可閉此選項。物可尋于本設之組。",
   "options.extshape.showSpecificGroups": "顯專物組",
   "options.extshape.showSpecificGroups.tooltip": "增益四專組以列塊之擁異形者，其括礦藝之本設。是塊也，序以基，塊同基者並序也。",
+  "options.extshape.showSpecificGroups.warning_for_1.20": "此版無可配置專物組也。物可尋于本設之組。",
   "options.extshape.shapesToAddToVanilla": "形之增益入本設者",
   "options.extshape.shapesToAddToVanilla.description": "增益何形於本設物組耶？（間以空。）",
   "options.extshape.shapesInSpecificGroups": "形之增益入專組者",
