--- a/src/main/resources/assets/extshape/lang/zh_cn.json
+++ b/src/main/resources/assets/extshape/lang/zh_cn.json
@@ -25,8 +25,10 @@
   "options.extshape.title": "扩展方块形状模组配置",
   "options.extshape.addToVanillaGroups": "添加至原版物品组",
   "options.extshape.addToVanillaGroups.tooltip": "如果启用，此模组的方块将会直接添加到Minecraft的原版物品组中，例如%s、%s和%s。方块会直接添加到其基础方块后面，这样你可以方便地找到同一基础方块的不同形状的方块。默认情况下，会添加所有的形状。你可以在下面的文本框中指定添加哪些形状。",
+  "options.extshape.addToVanillaGroups.warning_for_1.20": "此版本中，这个选项不支持关闭。请在原版的物品组中寻找物品。",
   "options.extshape.showSpecificGroups": "显示专用物品组",
   "options.extshape.showSpecificGroups.tooltip": "添加4个专门的物品组以显示所有拥有不同形状的方块（含原版和模组中的），这些方块按照其基础方块的顺序排列，基础方块相同的方块显示在一起。",
+  "options.extshape.showSpecificGroups.warning_for_1.20": "此版本不支持可配置的专用物品组。请在原版的物品组中寻找物品。",
   "options.extshape.shapesToAddToVanilla": "添加到原版物品组中的形状",
   "options.extshape.shapesToAddToVanilla.description": "需要将哪些形状的方块添加到原版物品组中？（用空格间隔。）",
   "options.extshape.shapesInSpecificGroups": "专用物品组中的形状",
