--- a/src/main/resources/assets/extshape/lang/zh_tw.json
+++ b/src/main/resources/assets/extshape/lang/zh_tw.json
@@ -25,8 +25,10 @@
   "options.extshape.title": "擴展方塊形狀模組配置",
   "options.extshape.addToVanillaGroups": "添加至原版物品組",
   "options.extshape.addToVanillaGroups.tooltip": "如果啟用，此模組中的方塊將會直接添加到 Minecraft 的原版物品組中，例如%s、%s和%s。方塊會直接添加到其基礎方塊後面，這樣你可以方便地找到同一基礎方塊的不同形狀的方塊。默認情況下，會添加所有的形狀。你可以在下面的文本框中指定添加哪些形狀。",
+  "options.extshape.addToVanillaGroups.warning_for_1.20": "此版本中，這個選項不支持關閉。請在原版的物品組中尋找物品。",
   "options.extshape.showSpecificGroups": "顯示專用物品組",
   "options.extshape.showSpecificGroups.tooltip": "添加4個專門的物品組以顯示所有擁有不同形狀的方塊（含原版和模組中的），這些方塊按照其基礎方塊的順序排列，基礎方塊相同的方塊顯示在一起。",
+  "options.extshape.showSpecificGroups.warning_for_1.20": "此版本不支持可配置的專用物品組。請在原版的物品組中尋找物品。",
   "options.extshape.shapesToAddToVanilla": "添加到原版物品組中的形狀",
   "options.extshape.shapesToAddToVanilla.description": "需要將哪些形狀的方塊添加到原版物品組中？（用空格間隔。）",
   "options.extshape.shapesInSpecificGroups": "專用物品組中的形狀",
