--- a/src/main/resources/assets/extshape/lang/zh_hk.json
+++ b/src/main/resources/assets/extshape/lang/zh_hk.json
@@ -14,46 +14,46 @@
   "block.extshape.?_vertical_stairs": "豎直%s樓梯",
   "block.extshape.?_vertical_quarter_piece": "%s縱條",
 
-  "itemGroup.extshape.wooden_blocks": "\u00a79擴展方塊形狀：\u00a7r木製和竹製方塊",
+  "itemGroup.extshape.wooden_blocks": "\u00a79擴展方塊形狀：\u00a7r木製同竹製方塊",
   "itemGroup.extshape.colorful_blocks": "\u00a79擴展方塊形狀：\u00a7r彩色方塊",
   "itemGroup.extshape.stone_blocks": "\u00a79擴展方塊形狀：\u00a7r石質方塊",
   "itemGroup.extshape.other_blocks": "\u00a79擴展方塊形狀：\u00a7r其他",
 
-  "modmenu.descriptionTranslation.extshape": "本模組為好多方塊添加咗更多形狀，包括原版唔存在嘅形狀，如縱半磚、縱樓梯和橫條。大多數方塊都有好似原版一样嘅行為，就類似於基礎方塊。比如，基岩樓梯和基岩半磚像基岩本身一樣，可以防爆防凋零怪，羊毛欄杆和羊毛閘門可燃且可以被鉸剪剪碎。藉助此模組，你可以製作出更加精美嘅建築，玩生成也會更貪得意。",
+  "modmenu.descriptionTranslation.extshape": "本模組為好多方塊添加咗更多形狀，包括原版唔存在嘅形狀，如縱半磚、縱樓梯同橫條。大多數方塊都有好似原版一样嘅行為，就類似於基礎方塊。比如，基岩樓梯同基岩半磚像基岩本身一樣，可以防爆防凋零怪，羊毛欄杆同羊毛閘門可燃且可以被鉸剪剪碎。\n藉助此模組，你可以製作出更加精美嘅建築，玩生存也會更貪得意。",
   "modmenu.summaryTranslation.extshape": "為好多原版方塊添加咗更多形狀，且具有類似原版嘅行為。",
 
   "options.extshape.title": "擴展方塊形狀模組配置",
   "options.extshape.addToVanillaGroups": "添加至原版物品組",
-  "options.extshape.addToVanillaGroups.tooltip": "如果啟用，此模組中的方塊將會直接添加到 Minecraft 的原版物品組中，例如%s、%s和%s。方塊會直接添加到其基礎方塊後面，這樣你可以方便地找到同一基礎方塊的不同形狀的方塊。默認情況下，會添加所有的形狀。你可以在下面的文本框中指定添加哪些形狀。",
-  "options.extshape.addToVanillaGroups.warning_for_1.20": "此版本中，這個選項未支持關閉。請喺原版物品組中尋找物品。",
+  "options.extshape.addToVanillaGroups.tooltip": "如果啟用，此模組中嘅方塊將會直接添加到 Minecraft 嘅原版物品組中，例如%s、%s同%s。方塊會直接添加到其基礎方塊後面，咁你可以方便找到同一基礎方塊嘅不同形狀嘅方塊。默認情況下，會添加所有嘅形狀。你可以喺下方嘅文本框中指定添加邊個形狀。",
+  "options.extshape.addToVanillaGroups.warning_for_1.20": "此版本中，呢個選項唔支持關閉。請喺原版物品組中尋找物品。",
   "options.extshape.showSpecificGroups": "顯示專用物品組",
-  "options.extshape.showSpecificGroups.tooltip": "添加4個專用物品組以顯示所有擁有不同形狀嘅方塊（含原版和模組中），依啲方塊按照其基礎方塊的順序排列，基礎方塊相同嘅方塊顯示在一起。",
-  "options.extshape.showSpecificGroups.warning_for_1.20": "此版本未支持可配置嘅專用物品組。請喺原版物品組中尋找物品。",
-  "options.extshape.shapesToAddToVanilla": "添加到原版物品組中的形狀",
-  "options.extshape.shapesToAddToVanilla.description": "需要將哪些形狀的方塊添加到原版物品組中？（用空格間隔。）",
-  "options.extshape.shapesInSpecificGroups": "專用物品組中的形狀",
-  "options.extshape.shapesInSpecificGroups.description": "將哪些形狀的方塊添加到本模組的專用物品組中？（用空格間隔。）",
+  "options.extshape.showSpecificGroups.tooltip": "添加 4 個專用物品組以顯示所有擁有唔同形狀嘅方塊（含原版同模組中），依啲方塊按照其基礎方塊嘅順序排列，基礎方塊相同嘅方塊顯示喺一起。",
+  "options.extshape.showSpecificGroups.warning_for_1.20": "此版本唔支持可配置嘅專用物品組。請喺原版物品組中尋找物品。",
+  "options.extshape.shapesToAddToVanilla": "添加到原版物品組中嘅形狀",
+  "options.extshape.shapesToAddToVanilla.description": "需要將邊形狀嘅方塊添加到原版物品組中？（用空格間隔。）",
+  "options.extshape.shapesInSpecificGroups": "專用物品組中嘅形狀",
+  "options.extshape.shapesInSpecificGroups.description": "將邊形狀嘅方塊添加到本模組嘅專用物品組中？（用空格間隔。）",
   "options.extshape.reset": "重置",
   "options.extshape.preventWoodenWallRecipes": "避免木牆合成配方",
   "options.extshape.preventWoodenWallRecipes.tooltip": "避免木牆嘅合成配方，以解決同木質地板門嘅配方撞車問題。若開啟，你將冇法合成木牆。如果你裝有可以修復合成表撞車嘅模組，可以將本選項關閉。",
   "options.extshape.avoidSomeButtonRecipes": "避免部分按鈕配方",
-  "options.extshape.avoidSomeButtonRecipes.tooltip": "避免部分按鈕嘅合成配方，以修復與其他物品配方撞車的問題。例如，由個鑽石磚合成鑽石按鈕嘅配方與將鑽石磚分解為 9 個鑽石物品嘅配方撞車。若開啟咗，你將冇法合成呢啲按鈕，以確保其他物品能正常合成。如果你安裝有可以修復合成表撞車嘅模組，可以將本選項關閉。",
-  "options.extshape.specialSnowSlabCrafting": "特殊的雪半磚配方",
+  "options.extshape.avoidSomeButtonRecipes.tooltip": "避免部分按鈕嘅合成配方，以修復同其他物品配方撞車嘅問題。例如，由個鑽石磚合成鑽石按鈕嘅配方與將鑽石磚分解為 9 個鑽石物品嘅配方撞車。若開啟咗，你將冇法合成呢啲按鈕，以確保其他物品能正常合成。如果你安裝咗可以修復合成表撞車嘅模組，可以將本選項關閉。",
+  "options.extshape.specialSnowSlabCrafting": "特殊嘅雪半磚配方",
   "options.extshape.specialSnowSlabCrafting.tooltip": "若開啟，雪半磚則由一個積雪合成，而唔喺由 3 個雪方塊。依個係為咗避免與積雪嘅合成配方嘅撞車。如果你裝有可以修復合成表撞車嘅模組，可以將本選項關閉。",
 
   "options.extshape.default": "默認：%s",
   "options.extshape.confirm": "確定？",
-  "options.extshape.confirm.noGroups": "你嘅「%s」和「%s」都設置為「%s」，這意味著你玩創造模式時，無法從創造模式物品欄中獲取模組中嘅物品。你真係要繼續？",
+  "options.extshape.confirm.noGroups": "你嘅「%s」同「%s」皆設置為「%s」，呢意味住你玩創造模式時，無法從創造模式物品欄中獲取模組中嘅物品。你真係要繼續？",
   "options.extshape.confirm.redo": "我再考慮一下",
   "options.extshape.registerBlockFamilies": "註冊 BlockFamilies",
-  "options.extshape.registerBlockFamilies.description": "一般不建議開啟。如果啟用，初始化 Minecraft 的時候，本模組中的方塊與 Minecraft 的原版方塊之間的關係將會註冊到 BlockFamilies 中。BlockFamilies 的註冊表可以被其他模組識別，但有可能導致不穩定，因此一般不需要開啟。",
+  "options.extshape.registerBlockFamilies.description": "一般唔建議開啟。如果啟用，初始化 Minecraft 嘅時候，本模組中嘅方塊與 Minecraft 嘅原版方塊之間嘅關係將會註冊到 BlockFamilies 中。BlockFamilies 嘅註冊表可以被其他模組識別，但有可能導致唔穩定，所以一般唔好開啟。",
   "options.extshape.requires_restart": "重啟遊戲後生效。",
 
   "options.extshape.reasonable-sorting": "合理排序模組配置",
-  "options.extshape.reasonable-sorting.description": "如果你安裝咗合理排序模組，你可以定義方塊物品根據其形狀如何排序，這些形狀包括本模組提供的方塊形狀。其他模組提供嘅方塊並唔會受到影響。\n\n你也可以喺模組功能表中選擇“Reasonable Sorting”以進入其模組配置介面。\n\n如果此按鈕點擊冇響應，可能係合理排序模組版本未安裝或過低。",
-  "options.extshape.dataChanged": "伺服器數據已改變，是否重新生成伺服器數據？",
-  "options.extshape.dataChanged.details": "本模組使用嘅運行時資源包喺 Minecraft 初始化時就會生成。你剛剛改咗與數據生成有關嘅選項，依個需要喺重新生成伺服器數據後才能生效。此外，如果當前伺服器（包括單人遊戲嘅內置伺服器）正在運行，你還需要輸入 \u00a77/reload\u00a7r 指令。",
-  "options.dataChanged.finish": "已重新生成運行時資源包的伺服器數據。如果您是在單人遊戲，或者是服主，請執行%s以加載合成表的更改。注意：多人遊戲下只有伺服器主機的設置才是有效的。",
+  "options.extshape.reasonable-sorting.description": "如果你安裝咗合理排序模組，你可以定義方塊物品根據其形狀如何排序，呢啲形狀包括本模組提供即方塊形狀。其他模組提供嘅方塊並唔會受到影響。\n\n你也可以喺模組功能表中選擇“Reasonable Sorting”以進入其模組配置介面。\n\n如果此按鈕點擊冇響應，可能係合理排序模組版本未安裝或過低。",
+  "options.extshape.dataChanged": "伺服器數據已改變，係咪重新生成伺服器數據？",
+  "options.extshape.dataChanged.details": "本模組使用嘅運行時資源包喺 Minecraft 初始化時就會生成。你剛剛改咗與數據生成有關嘅選項，依個需要喺重新生成伺服器數據後才能生效。此外，如果當前伺服器（包括單人遊戲嘅內置伺服器）運行緊，你還需要輸入 \u00a77/reload\u00a7r 指令。",
+  "options.dataChanged.finish": "已重新生成運行時資源包嘅伺服器數據。如果您係喺單人遊戲，或者係服主，請執行%s以加載合成表嘅更改。注意：多人遊戲下只有伺服器主機嘅設置才係有效嘅。",
 
   "message.extshape.recipe_conflict.start": "開始檢測合成表撞車，可能需要一段時間",
   "message.extshape.recipe_conflict.detected": "檢測到合成表存在撞車：%s",
@@ -65,5 +65,5 @@
 
   "modmenu.nameTranslation.extshape": "擴展方塊形狀",
 
-  "options.extshape.addToVanillaGroups.blockus": "請注意：如要在創造模式中找到 Blockus 模組中的擴展形狀的方塊，你需要啟用「添加至原版物品組」。這些方塊只會顯示在 Blockus 的物品組中。Blockus 方塊的擴展形狀的方塊沒有專用物品組。"
+  "options.extshape.addToVanillaGroups.blockus": "請注意：如要喺創造模式中尋到 Blockus 模組中嘅擴展形狀嘅方塊，你需要啟用「添加至原版物品組」。呢啲方塊只會顯示喺 Blockus 嘅物品組中。Blockus 方塊嘅擴展形狀嘅方塊冇專用物品組。"
 }
