--- a/src/main/resources/assets/extshape/lang/zh_tw.json
+++ b/src/main/resources/assets/extshape/lang/zh_tw.json
@@ -19,14 +19,14 @@
   "itemGroup.extshape.stone_blocks": "\u00a79擴展方塊形狀：\u00a7r石質方塊",
   "itemGroup.extshape.other_blocks": "\u00a79擴展方塊形狀：\u00a7r其他",
 
-  "modmenu.descriptionTranslation.extshape": "本模組為許多原版方塊添加了更多形狀，包括原版不存在的形狀，如縱半磚、縱樓梯和橫條。大多數方塊都具有類似於原版的行為，就像其基礎方塊一樣。例如，基岩階梯和基岩半磚像基岩本身一樣可以防爆防凋零怪，羊毛柵欄和羊毛柵欄門可燃且可以被剪刀剪。藉助此模組，你可以製作出更加精美的建築，玩生存也會更加有趣。",
+  "modmenu.descriptionTranslation.extshape": "本模組為許多原版方塊添加了更多形狀，包括原版不存在的形狀，如縱半磚、縱樓梯和橫條。大多數方塊都具有類似於原版的行為，就像其基礎方塊一樣。例如，基岩階梯和基岩半磚像基岩本身一樣可以防爆防凋零怪，羊毛柵欄和羊毛柵欄門可燃且可以被剪刀剪。\n藉助此模組，你可以製作出更加精美的建築，玩生存也會更加有趣。",
   "modmenu.summaryTranslation.extshape": "為許多原版方塊添加了更多形狀，且具有類似原版的行為。",
 
   "options.extshape.title": "擴展方塊形狀模組配置",
   "options.extshape.addToVanillaGroups": "添加至原版物品組",
   "options.extshape.addToVanillaGroups.tooltip": "如果啟用，此模組中的方塊將會直接添加到 Minecraft 的原版物品組中，例如%s、%s和%s。方塊會直接添加到其基礎方塊後面，這樣你可以方便地找到同一基礎方塊的不同形狀的方塊。默認情況下，會添加所有的形狀。你可以在下面的文本框中指定添加哪些形狀。",
   "options.extshape.showSpecificGroups": "顯示專用物品組",
-  "options.extshape.showSpecificGroups.tooltip": "添加4個專門的物品組以顯示所有擁有不同形狀的方塊（含原版和模組中的），這些方塊按照其基礎方塊的順序排列，基礎方塊相同的方塊顯示在一起。",
+  "options.extshape.showSpecificGroups.tooltip": "添加 4 個專門的物品組以顯示所有擁有不同形狀的方塊（含原版和模組中的），這些方塊按照其基礎方塊的順序排列，基礎方塊相同的方塊顯示在一起。",
   "options.extshape.shapesToAddToVanilla": "添加到原版物品組中的形狀",
   "options.extshape.shapesToAddToVanilla.description": "需要將哪些形狀的方塊添加到原版物品組中？（用空格間隔。）",
   "options.extshape.shapesInSpecificGroups": "專用物品組中的形狀",
